--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svg-icons",
+  "name": "svg-icon",
   "version": "0.0.0",
   "description": "an ultimate svg icons collection",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/leungwensen/svg-icons.git"
+    "url": "git+https://github.com/leungwensen/svg-icon.git"
   },
   "keywords": [
     "svg",
@@ -17,7 +17,7 @@
   "author": "https://github.com/leungwensen",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/leungwensen/svg-icons/issues"
+    "url": "https://github.com/leungwensen/svg-icon/issues"
   },
-  "homepage": "https://github.com/leungwensen/svg-icons#readme"
+  "homepage": "https://github.com/leungwensen/svg-icon#readme"
 }
