--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "description": "an ultimate svg icons collection",
   "main": "index.js",
+  "homepage": "https://github.com/leungwensen/svg-icon#readme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,13 +12,48 @@
     "url": "git+https://github.com/leungwensen/svg-icon.git"
   },
   "keywords": [
-    "svg",
-    "icons"
+    "bin"
   ],
   "author": "https://github.com/leungwensen",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/leungwensen/svg-icon/issues"
   },
-  "homepage": "https://github.com/leungwensen/svg-icon#readme"
+  "dependencies": {
+    "co": "^4.6.0",
+    "commander": "^2.9.0",
+    "inquirer": "^1.0.2",
+    "shelljs": "^0.7.0",
+    "svgo": "^0.6.6",
+    "through2": "^2.0.1",
+    "thunkify": "^2.1.2",
+    "underscore": "^1.8.3",
+    "vinyl-fs": "^2.4.3",
+    "which": "^1.2.9",
+    "xml2js": "^0.4.16"
+  },
+  "devDependencies": {
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^8.0.0",
+    "eslint-plugin-import": "^1.6.0",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-markdown": "^1.0.0-beta.2",
+    "eslint-plugin-react": "^5.1.1",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^2.0.0",
+    "gulp-if": "^2.0.0",
+    "gulp-jsdoc3": "^0.2.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-util": "^3.0.7",
+    "jsdoc": "^3.4.0",
+    "pre-commit": "^1.1.2",
+    "require-dir": "^0.3.0",
+    "through2": "^2.0.1"
+  },
+  "engines": {
+    "node": ">=4.0.0"
+  },
+  "bin": {
+    "svg-icon": "./index.js"
+  }
 }
