--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "svg-icon",
-  "version": "0.0.0",
-  "description": "an ultimate svg icons collection",
+  "version": "0.0.1",
+  "description": "an ultimate svg icons collection done right",
   "main": "index.js",
   "homepage": "https://github.com/leungwensen/svg-icon#readme",
   "scripts": {
