--- a/.gitignore
+++ b/.gitignore
@@ -24,12 +24,15 @@ coverage
 build/Release
 
 # Dependency directory
+# https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
+.npm
 node_modules
 
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
+# IDE
 .idea
+
+# jsdoc
+doc/jsdoc
+
+# temp
+temp
