--- a/package.json
+++ b/package.json
@@ -34,22 +34,48 @@
     "xml2js": "^0.4.16"
   },
   "devDependencies": {
+    "babel-cli": "^6.7.7",
+    "babel-core": "^6.7.7",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "chai": "3.5.0",
+    "css-loader": "^0.23.1",
     "eslint": "^2.8.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-plugin-import": "^1.6.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-markdown": "^1.0.0-beta.2",
     "eslint-plugin-react": "^5.1.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-eslint": "^2.0.0",
     "gulp-if": "^2.0.0",
     "gulp-jsdoc3": "^0.2.1",
     "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.7",
     "jsdoc": "^3.4.0",
+    "json-loader": "^0.5.4",
+    "lebab": "^1.1.1",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
+    "mocha": "^2.4.5",
+    "open": "^0.0.5",
+    "postcss": "^5.0.19",
+    "postcss-loader": "^0.8.2",
     "pre-commit": "^1.1.2",
+    "ranma": "^0.5.0",
     "require-dir": "^0.3.0",
-    "through2": "^2.0.1"
+    "style-loader": "^0.13.1",
+    "template-importing-loader": "^0.0.1",
+    "template2module-loader": "^0.0.20160513",
+    "through2": "^2.0.1",
+    "underscore": "^1.8.3",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   },
   "engines": {
     "node": ">=4.0.0"
