--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "co": "^4.6.0",
+    "co-request": "^1.0.0",
     "commander": "^2.9.0",
     "inquirer": "^1.0.2",
     "map-stream": "^0.0.6",
