--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "commander": "^2.9.0",
     "inquirer": "^1.0.2",
     "map-stream": "^0.0.6",
+    "minimize": "^1.8.1",
     "shelljs": "^0.7.0",
     "svgo": "^0.6.6",
     "through2": "^2.0.1",
