--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "bootstrap": "^3.3.6",
     "chai": "3.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.8.0",
@@ -58,9 +59,11 @@
     "gulp-jsdoc3": "^0.2.1",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-shell": "^0.5.2",
     "gulp-svg-sprite": "^1.3.3",
     "gulp-svgmin": "^1.2.2",
     "gulp-util": "^3.0.7",
+    "jquery": "^2.2.4",
     "jsdoc": "^3.4.0",
     "json-loader": "^0.5.4",
     "lebab": "^1.1.1",
@@ -72,6 +75,7 @@
     "postcss-loader": "^0.8.2",
     "pre-commit": "^1.1.2",
     "ranma": "^0.5.0",
+    "raw-loader": "^0.5.1",
     "require-dir": "^0.3.0",
     "style-loader": "^0.13.1",
     "template-importing-loader": "^0.0.1",
