--- a/.eslintrc
+++ b/.eslintrc
@@ -12,14 +12,8 @@
       }
     ],
     "no-param-reassign": 0,
-    "comma-dangle": [
-      2,
-      "never"
-    ],
-    "strict": [
-      2,
-      "global"
-    ],
+    "comma-dangle": 1,
+    "strict": 0,
     "id-length": [
       2,
       {
