--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "co": "^4.6.0",
     "co-request": "^1.0.0",
     "commander": "^2.9.0",
+    "file-saver": "^1.3.2",
     "inquirer": "^1.0.2",
     "map-stream": "^0.0.6",
     "minimize": "^1.8.1",
