--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "pre-commit": "^1.1.2",
     "ranma": "^0.5.0",
     "raw-loader": "^0.5.1",
+    "request": "^2.73.0",
     "require-dir": "^0.3.0",
     "style-loader": "^0.13.1",
     "template-importing-loader": "^0.0.1",
