--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "commander": "^2.9.0",
     "file-saver": "^1.3.2",
     "inquirer": "^1.0.2",
+    "lesshat": "^4.1.0",
     "map-stream": "^0.0.6",
     "minimize": "^1.8.1",
+    "normalize.css": "^4.2.0",
     "shelljs": "^0.7.0",
     "svgo": "^0.6.6",
     "through2": "^2.0.1",
