--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
     "commander": "^2.9.0",
     "file-saver": "^1.3.2",
     "inquirer": "^1.0.2",
+    "jquery": "^2.2.4",
     "lesshat": "^4.1.0",
     "map-stream": "^0.0.6",
     "minimize": "^1.8.1",
     "normalize.css": "^4.2.0",
     "shelljs": "^0.7.0",
+    "spinkit": "^1.2.5",
     "svgo": "^0.6.6",
+    "tabslet": "^1.7.2",
     "through2": "^2.0.1",
     "thunkify": "^2.1.2",
     "vinyl-fs": "^2.4.3",
@@ -66,7 +69,6 @@
     "gulp-svg-sprite": "^1.3.3",
     "gulp-svgmin": "^1.2.2",
     "gulp-util": "^3.0.7",
-    "jquery": "^2.2.4",
     "jsdoc": "^3.4.0",
     "json-loader": "^0.5.4",
     "lebab": "^1.1.1",
