--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "map-stream": "^0.0.6",
     "minimize": "^1.8.1",
     "normalize.css": "^4.2.0",
+    "phantom": "^2.1.14",
+    "random-string": "^0.1.2",
     "shelljs": "^0.7.0",
     "spinkit": "^1.2.5",
     "svgo": "^0.6.6",
