--- a/.eslintrc
+++ b/.eslintrc
@@ -12,6 +12,7 @@
       }
     ],
     "no-param-reassign": 0,
+    "no-underscore-dangle": 1,
     "comma-dangle": 1,
     "import/no-unresolved": 1,
     "strict": 0,
