--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "gulp-svg-sprite": "^1.3.3",
     "gulp-svgmin": "^1.2.2",
     "gulp-util": "^3.0.7",
+    "js-yaml": "^3.6.1",
     "jsdoc": "^3.4.0",
     "json-loader": "^0.5.4",
     "lebab": "^1.1.1",
