--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "sync-cnpm": "cnpm sync svg-icon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": [
+    "eslint"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/leungwensen/svg-icon.git"
@@ -39,10 +42,6 @@
     "css-loader": "^0.25.0",
     "cssnano": "^3.8.0",
     "eslint": "^3.10.2",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.1",
-    "eslint-plugin-react": "^6.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
