--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "normalize.css": "^5.0.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "pre-commit": "^1.1.3",
+    "request": "^2.79.0",
     "require-dir": "^0.3.1",
     "style-loader": "^0.13.1",
     "template2module": "^0.2.3",
