--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "commander": "^2.9.0",
+    "jszip": "^3.1.3",
     "nightmare": "^2.8.1",
     "svgo": "^0.7.1",
     "xml-lite": "^0.7.3",
